--- a/src/main/resources/views/bierVerliesView.fxml
+++ b/src/main/resources/views/bierVerliesView.fxml
@@ -4,29 +4,29 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="901.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="contollers.BierVerliesViewContoller">
+<AnchorPane prefHeight="831.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="contollers.BierVerliesViewContoller">
    <children>
       <Text layoutX="6.0" layoutY="62.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Totale voorraad: " wrappingWidth="446.0">
          <font>
-            <Font size="48.0" />
+            <Font size="36.0" />
          </font>
       </Text>
       <Text layoutX="6.0" layoutY="133.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Hoeveelheid Kratten:" wrappingWidth="504.41015625">
          <font>
-            <Font size="48.0" />
+            <Font size="36.0" />
          </font>
       </Text>
       <Text layoutX="6.0" layoutY="212.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Losse pinten:" wrappingWidth="343.41015625">
          <font>
-            <Font size="48.0" />
+            <Font size="36.0" />
          </font>
       </Text>
-      <Button fx:id="everyoneButton" layoutX="723.0" layoutY="16.0" mnemonicParsing="false" onAction="#everyoneButton" prefHeight="169.0" prefWidth="543.0" text="Iedereen aanwezig">
+      <Button fx:id="everyoneButton" layoutX="723.0" layoutY="16.0" mnemonicParsing="false" onAction="#everyoneButton" prefHeight="150.0" prefWidth="543.0" text="Iedereen aanwezig">
          <font>
             <Font size="48.0" />
          </font>
       </Button>
-      <Pane fx:id="namePane0" layoutX="723.0" layoutY="187.0" onMouseClicked="#namePanePress" prefHeight="100.0" prefWidth="543.0" style="-fx-background-color: white; -fx-border-color: black;">
+      <Pane fx:id="namePane0" layoutX="723.0" layoutY="166.0" onMouseClicked="#namePanePress" prefHeight="90.0" prefWidth="543.0" style="-fx-background-color: white; -fx-border-color: black;">
          <children>
             <Label fx:id="nameLabel0" alignment="CENTER" layoutX="14.0" layoutY="14.0" prefHeight="70.0" prefWidth="517.0" text="Naam">
                <font>
@@ -35,89 +35,89 @@
             </Label>
          </children>
       </Pane>
-      <Pane fx:id="namePane1" layoutX="723.0" layoutY="287.0" onMouseClicked="#namePanePress" prefHeight="100.0" prefWidth="543.0" style="-fx-background-color: white; -fx-border-color: black;">
+      <Pane fx:id="namePane1" layoutX="723.0" layoutY="255.0" onMouseClicked="#namePanePress" prefHeight="90.0" prefWidth="543.0" style="-fx-background-color: white; -fx-border-color: black;">
          <Label fx:id="nameLabel1" alignment="CENTER" layoutX="13.0" layoutY="15.0" prefHeight="64.0" prefWidth="517.0" text="Naam">
             <font>
                <Font size="48.0" />
             </font>
          </Label>
       </Pane>
-      <Pane fx:id="namePane2" layoutX="723.0" layoutY="387.0" onMouseClicked="#namePanePress" prefHeight="100.0" prefWidth="543.0" style="-fx-background-color: white; -fx-border-color: black;">
+      <Pane fx:id="namePane2" layoutX="723.0" layoutY="344.0" onMouseClicked="#namePanePress" prefHeight="90.0" prefWidth="543.0" style="-fx-background-color: white; -fx-border-color: black;">
          <Label fx:id="nameLabel2" alignment="CENTER" layoutX="13.0" layoutY="15.0" prefHeight="64.0" prefWidth="517.0" text="Naam">
             <font>
                <Font size="48.0" />
             </font>
          </Label>
       </Pane>
-      <Pane fx:id="namePane3" layoutX="723.0" layoutY="487.0" onMouseClicked="#namePanePress" prefHeight="100.0" prefWidth="543.0" style="-fx-background-color: white; -fx-border-color: black;">
+      <Pane fx:id="namePane3" layoutX="723.0" layoutY="433.0" onMouseClicked="#namePanePress" prefHeight="90.0" prefWidth="543.0" style="-fx-background-color: white; -fx-border-color: black;">
          <Label fx:id="nameLabel3" alignment="CENTER" layoutX="13.0" layoutY="15.0" prefHeight="64.0" prefWidth="517.0" text="Naam">
             <font>
                <Font size="48.0" />
             </font>
          </Label>
       </Pane>
-      <Pane fx:id="namePane4" layoutX="723.0" layoutY="587.0" onMouseClicked="#namePanePress" prefHeight="100.0" prefWidth="543.0" style="-fx-background-color: white; -fx-border-color: black;">
+      <Pane fx:id="namePane4" layoutX="723.0" layoutY="522.0" onMouseClicked="#namePanePress" prefHeight="90.0" prefWidth="543.0" style="-fx-background-color: white; -fx-border-color: black;">
          <Label fx:id="nameLabel4" alignment="CENTER" layoutX="13.0" layoutY="15.0" prefHeight="64.0" prefWidth="517.0" text="Naam">
             <font>
                <Font size="48.0" />
             </font>
          </Label>
       </Pane>
-      <Pane fx:id="namePane5" layoutX="723.0" layoutY="687.0" onMouseClicked="#namePanePress" prefHeight="100.0" prefWidth="543.0" style="-fx-background-color: white; -fx-border-color: black;">
+      <Pane fx:id="namePane5" layoutX="723.0" layoutY="611.0" onMouseClicked="#namePanePress" prefHeight="90.0" prefWidth="543.0" style="-fx-background-color: white; -fx-border-color: black;">
          <Label fx:id="nameLabel5" alignment="CENTER" layoutX="13.0" layoutY="15.0" prefHeight="64.0" prefWidth="517.0" text="Naam">
             <font>
                <Font size="48.0" />
             </font>
          </Label>
       </Pane>
-      <Button fx:id="confirmButton" layoutY="787.0" mnemonicParsing="false" onAction="#confirmBierverlies" prefHeight="137.0" prefWidth="1266.0" text="Bevestig">
+      <Button fx:id="confirmButton" layoutX="7.0" layoutY="714.0" mnemonicParsing="false" onAction="#confirmBierverlies" prefHeight="110.0" prefWidth="1266.0" text="Bevestig">
          <font>
-            <Font size="64.0" />
+            <Font size="48.0" />
          </font>
       </Button>
-      <Button fx:id="button3" layoutX="333.0" layoutY="262.0" mnemonicParsing="false" onAction="#numpad" prefHeight="150.0" prefWidth="150.0" text="3">
+      <Button fx:id="button3" layoutX="333.0" layoutY="253.0" mnemonicParsing="false" onAction="#numpad" prefHeight="150.0" prefWidth="150.0" text="3">
          <font>
             <Font size="48.0" />
          </font></Button>
-      <Button fx:id="button1" layoutX="33.0" layoutY="262.0" mnemonicParsing="false" onAction="#numpad" prefHeight="150.0" prefWidth="150.0" text="1">
+      <Button fx:id="button1" layoutX="33.0" layoutY="253.0" mnemonicParsing="false" onAction="#numpad" prefHeight="150.0" prefWidth="150.0" text="1">
          <font>
             <Font size="48.0" />
          </font></Button>
-      <Button fx:id="button2" layoutX="183.0" layoutY="262.0" mnemonicParsing="false" onAction="#numpad" prefHeight="150.0" prefWidth="150.0" text="2">
+      <Button fx:id="button2" layoutX="183.0" layoutY="253.0" mnemonicParsing="false" onAction="#numpad" prefHeight="150.0" prefWidth="150.0" text="2">
          <font>
             <Font size="48.0" />
          </font></Button>
-      <Button fx:id="button8" layoutX="183.0" layoutY="562.0" mnemonicParsing="false" onAction="#numpad" prefHeight="150.0" prefWidth="150.0" text="8">
+      <Button fx:id="button8" layoutX="183.0" layoutY="553.0" mnemonicParsing="false" onAction="#numpad" prefHeight="150.0" prefWidth="150.0" text="8">
          <font>
             <Font size="48.0" />
          </font></Button>
-      <Button fx:id="button5" layoutX="183.0" layoutY="412.0" mnemonicParsing="false" onAction="#numpad" prefHeight="150.0" prefWidth="150.0" text="5">
+      <Button fx:id="button5" layoutX="183.0" layoutY="403.0" mnemonicParsing="false" onAction="#numpad" prefHeight="150.0" prefWidth="150.0" text="5">
          <font>
             <Font size="48.0" />
          </font></Button>
-      <Button fx:id="button6" layoutX="333.0" layoutY="412.0" mnemonicParsing="false" onAction="#numpad" prefHeight="150.0" prefWidth="150.0" text="6">
+      <Button fx:id="button6" layoutX="333.0" layoutY="403.0" mnemonicParsing="false" onAction="#numpad" prefHeight="150.0" prefWidth="150.0" text="6">
          <font>
             <Font size="48.0" />
          </font></Button>
-      <Button fx:id="button0" layoutX="483.0" layoutY="562.0" mnemonicParsing="false" onAction="#numpad" prefHeight="150.0" prefWidth="150.0" text="0">
+      <Button fx:id="button0" layoutX="483.0" layoutY="553.0" mnemonicParsing="false" onAction="#numpad" prefHeight="150.0" prefWidth="150.0" text="0">
          <font>
             <Font size="48.0" />
          </font></Button>
-      <Button fx:id="button9" layoutX="333.0" layoutY="562.0" mnemonicParsing="false" onAction="#numpad" prefHeight="150.0" prefWidth="150.0" text="9">
+      <Button fx:id="button9" layoutX="333.0" layoutY="553.0" mnemonicParsing="false" onAction="#numpad" prefHeight="150.0" prefWidth="150.0" text="9">
          <font>
             <Font size="48.0" />
          </font></Button>
-      <Button fx:id="button4" layoutX="33.0" layoutY="412.0" mnemonicParsing="false" onAction="#numpad" prefHeight="150.0" prefWidth="150.0" text="4">
+      <Button fx:id="button4" layoutX="33.0" layoutY="403.0" mnemonicParsing="false" onAction="#numpad" prefHeight="150.0" prefWidth="150.0" text="4">
          <font>
             <Font size="48.0" />
          </font></Button>
-      <Button fx:id="button7" layoutX="33.0" layoutY="562.0" mnemonicParsing="false" onAction="#numpad" prefHeight="150.0" prefWidth="150.0" text="7">
+      <Button fx:id="button7" layoutX="33.0" layoutY="553.0" mnemonicParsing="false" onAction="#numpad" prefHeight="150.0" prefWidth="150.0" text="7">
          <font>
             <Font size="48.0" />
          </font></Button>
       <Pane fx:id="pintenPane" layoutX="487.0" layoutY="170.0" onMouseClicked="#setCurrentSelection" prefHeight="45.0" prefWidth="76.0" style="-fx-background-color: white;">
          <children>
-            <Label fx:id="pintenField" layoutX="6.0" layoutY="-2.0">
+            <Label fx:id="pintenField" layoutX="6.0">
                <font>
                   <Font size="36.0" />
                </font>
@@ -126,21 +126,21 @@
       </Pane>
       <Pane fx:id="krattenPane" layoutX="487.0" layoutY="91.0" onMouseClicked="#setCurrentSelection" prefHeight="45.0" prefWidth="76.0" style="-fx-background-color: white;">
          <children>
-            <Label fx:id="krattenField" layoutX="6.0" layoutY="-4.0">
+            <Label fx:id="krattenField" layoutX="6.0">
                <font>
                   <Font size="36.0" />
                </font>
             </Label>
          </children>
       </Pane>
-      <Button fx:id="buttonDel" layoutX="483.0" layoutY="412.0" mnemonicParsing="false" onAction="#numpad" prefHeight="150.0" prefWidth="150.0" text="Del">
+      <Button fx:id="buttonDel" layoutX="483.0" layoutY="403.0" mnemonicParsing="false" onAction="#numpad" prefHeight="150.0" prefWidth="150.0" text="Del">
          <font>
             <Font size="48.0" />
          </font>
       </Button>
       <Pane fx:id="pintenPane1" layoutX="487.0" layoutY="20.0" onMouseClicked="#setCurrentSelection" prefHeight="45.0" prefWidth="76.0" style="-fx-background-color: white;">
          <children>
-            <Label fx:id="totalStock" layoutX="8.0" layoutY="-4.0" text="##">
+            <Label fx:id="totalStock" layoutX="8.0" text="##">
                <font>
                   <Font size="36.0" />
                </font>
