--- a/src/main/resources/views/lineChartView.fxml
+++ b/src/main/resources/views/lineChartView.fxml
@@ -1,18 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.chart.*?>
 <?import javafx.scene.layout.*?>
-
 
 <AnchorPane prefHeight="831.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="contollers.LineChartController">
    <children>
-      <LineChart fx:id="lineChart" layoutX="30.0" layoutY="30.0" prefHeight="770.0" prefWidth="1220.0">
-        <xAxis>
-          <CategoryAxis side="BOTTOM" />
-        </xAxis>
-        <yAxis>
-          <NumberAxis side="LEFT" />
-        </yAxis>
-      </LineChart>
+      <VBox fx:id="container" layoutX="15.0" layoutY="15.0" prefHeight="801.0" prefWidth="1250.0" />
    </children>
 </AnchorPane>
