--- a/src/main/resources/views/statistiekView.fxml
+++ b/src/main/resources/views/statistiekView.fxml
@@ -6,11 +6,12 @@
 
 <AnchorPane prefHeight="831.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="contollers.StatistiekViewController">
    <children>
-      <ListView fx:id="listView" layoutX="14.0" layoutY="63.0" prefHeight="756.0" prefWidth="1251.0" style="-fx-font-size: 28pt" />
-      <Text layoutX="15.0" layoutY="46.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Naam - Totaal gezopen - deze maand gezopen - per maand - per dag - in huis getreden op" wrappingWidth="1250.999984741211">
+      <VBox fx:id="container" layoutX="16.0" layoutY="125.0" prefHeight="689.0" prefWidth="1250.0" />
+      <Button fx:id="lineChartButton" layoutX="15.0" layoutY="15.0" mnemonicParsing="false" onAction="#lineChart" prefHeight="100.0" prefWidth="150.0" text="Linechart van Maand" />
+      <Button fx:id="tabelButton" layoutX="165.0" layoutY="15.0" mnemonicParsing="false" onAction="#tabelButton" prefHeight="100.0" prefWidth="150.0" text="Tabel">
          <font>
             <Font size="24.0" />
          </font>
-      </Text>
+      </Button>
    </children>
 </AnchorPane>
