--- a/src/main/resources/views/statistiekView.fxml
+++ b/src/main/resources/views/statistiekView.fxml
@@ -7,10 +7,18 @@
 <AnchorPane prefHeight="831.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="contollers.StatistiekViewController">
    <children>
       <VBox fx:id="container" layoutX="16.0" layoutY="125.0" prefHeight="689.0" prefWidth="1250.0" />
-      <Button fx:id="lineChartButton" layoutX="15.0" layoutY="15.0" mnemonicParsing="false" onAction="#lineChart" prefHeight="100.0" prefWidth="150.0" text="Linechart van Maand" />
+      <Button fx:id="lineChartButton" layoutX="15.0" layoutY="15.0" mnemonicParsing="false" onAction="#lineChart" prefHeight="100.0" prefWidth="150.0" text="Deze Maand">
+         <font>
+            <Font size="16.0" />
+         </font></Button>
       <Button fx:id="tabelButton" layoutX="165.0" layoutY="15.0" mnemonicParsing="false" onAction="#tabelButton" prefHeight="100.0" prefWidth="150.0" text="Tabel">
          <font>
             <Font size="24.0" />
+         </font>
+      </Button>
+      <Button fx:id="jarfGildeButton" layoutX="315.0" layoutY="15.0" mnemonicParsing="false" onAction="#jarfGildeButton" prefHeight="100.0" prefWidth="150.0" text="JarfGilde">
+         <font>
+            <Font size="18.0" />
          </font>
       </Button>
    </children>
