--- a/src/main/resources/views/jarfGildeView.fxml
+++ b/src/main/resources/views/jarfGildeView.fxml
@@ -121,7 +121,7 @@
                </Label>
            </children>
        </Pane>
-      <Text layoutX="840.0" layoutY="61.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Jarfinitiet">
+      <Text layoutX="840.0" layoutY="61.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Jarfiniteit">
          <font>
             <Font size="48.0" />
          </font>
