--- a/src/main/resources/views/kratTurfView.fxml
+++ b/src/main/resources/views/kratTurfView.fxml
@@ -4,9 +4,8 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="831.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="contollers.TurfViewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="831.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="contollers.TurfKratViewController">
         <children>
-            <Slider fx:id="levelSlider" layoutX="1076.0" layoutY="3.0" majorTickUnit="1.0" max="5.0" minorTickCount="0" prefHeight="35.0" prefWidth="200.0" snapToTicks="true" />
             <Text layoutX="6.0" layoutY="29.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Totale voorraad: " wrappingWidth="274.0">
                 <font>
                     <Font size="24.0" />
@@ -24,9 +23,14 @@
                             <Font size="44.0" />
                         </font>
                     </Label>
-                    <Button fx:id="beerDrank5" layoutY="100.0" mnemonicParsing="false" onAction="#drankButtonClicked" prefHeight="200.0" prefWidth="404.0" text="Bier Gepakt">
+                    <Button fx:id="misKrat5" layoutY="300.0" mnemonicParsing="false" onAction="#misKratButtonClicked" prefHeight="80.0" prefWidth="404.0" text="MisKrat">
                         <font>
-                            <Font size="48.0" />
+                            <Font size="18.0" />
+                        </font>
+                    </Button>
+                    <Button fx:id="kratKoop5" layoutY="100.0" mnemonicParsing="false" onAction="#kratKoopButtonClicked" prefHeight="200.0" prefWidth="404.0" text="Krat gekocht">
+                        <font>
+                            <Font size="18.0" />
                         </font>
                     </Button>
                     <Label fx:id="stockAcc5" layoutX="330.0" layoutY="30.0" text="##">
@@ -34,11 +38,6 @@
                             <Font size="36.0" />
                         </font>
                     </Label>
-                    <Button fx:id="misBeer5" layoutY="300.0" mnemonicParsing="false" onAction="#misBeerButtonClicked" prefHeight="80.0" prefWidth="404.0" text="MisBier">
-                        <font>
-                            <Font size="18.0" />
-                        </font>
-                    </Button>
                 </children>
             </Pane>
             <Pane fx:id="AccPane4" layoutX="438.0" layoutY="438.0" prefHeight="380.0" prefWidth="405.0" style="-fx-background-color: ffffff;">
@@ -48,14 +47,14 @@
                             <Font size="44.0" />
                         </font>
                     </Label>
-                    <Button fx:id="misBeer4" layoutY="300.0" mnemonicParsing="false" onAction="#misBeerButtonClicked" prefHeight="80.0" prefWidth="404.0" text="MisBier">
+                    <Button fx:id="misKrat4" layoutY="300.0" mnemonicParsing="false" onAction="#misKratButtonClicked" prefHeight="80.0" prefWidth="404.0" text="MisKrat">
                         <font>
                             <Font size="18.0" />
                         </font>
                     </Button>
-                    <Button fx:id="beerDrank4" layoutY="100.0" mnemonicParsing="false" onAction="#drankButtonClicked" prefHeight="200.0" prefWidth="404.0" text="Bier Gepakt">
+                    <Button fx:id="kratKoop4" layoutY="100.0" mnemonicParsing="false" onAction="#kratKoopButtonClicked" prefHeight="200.0" prefWidth="404.0" text="Krat gekocht">
                         <font>
-                            <Font size="48.0" />
+                            <Font size="18.0" />
                         </font>
                     </Button>
                     <Label fx:id="stockAcc4" layoutX="330.0" layoutY="30.0" text="##">
@@ -72,14 +71,14 @@
                             <Font size="44.0" />
                         </font>
                     </Label>
-                    <Button fx:id="misBeer3" layoutY="300.0" mnemonicParsing="false" onAction="#misBeerButtonClicked" prefHeight="80.0" prefWidth="404.0" text="MisBier">
+                    <Button fx:id="misKrat3" layoutY="300.0" mnemonicParsing="false" onAction="#misKratButtonClicked" prefHeight="80.0" prefWidth="404.0" text="MisKrat">
                         <font>
                             <Font size="18.0" />
                         </font>
                     </Button>
-                    <Button fx:id="beerDrank3" layoutY="100.0" mnemonicParsing="false" onAction="#drankButtonClicked" prefHeight="200.0" prefWidth="404.0" text="Bier Gepakt">
+                    <Button fx:id="kratKoop3" layoutY="100.0" mnemonicParsing="false" onAction="#kratKoopButtonClicked" prefHeight="200.0" prefWidth="404.0" text="Krat gekocht">
                         <font>
-                            <Font size="48.0" />
+                            <Font size="18.0" />
                         </font>
                     </Button>
                     <Label fx:id="stockAcc3" layoutX="330.0" layoutY="30.0" text="##">
@@ -96,14 +95,14 @@
                             <Font size="44.0" />
                         </font>
                     </Label>
-                    <Button fx:id="misBeer2" layoutY="300.0" mnemonicParsing="false" onAction="#misBeerButtonClicked" prefHeight="80.0" prefWidth="404.0" text="MisBier">
+                    <Button fx:id="misKrat2" layoutY="300.0" mnemonicParsing="false" onAction="#misKratButtonClicked" prefHeight="80.0" prefWidth="404.0" text="MisKrat">
                         <font>
                             <Font size="18.0" />
                         </font>
                     </Button>
-                    <Button fx:id="beerDrank2" layoutY="100.0" mnemonicParsing="false" onAction="#drankButtonClicked" prefHeight="200.0" prefWidth="404.0" text="Bier Gepakt">
+                    <Button fx:id="kratKoop2" layoutY="100.0" mnemonicParsing="false" onAction="#kratKoopButtonClicked" prefHeight="200.0" prefWidth="404.0" text="Krat gekocht">
                         <font>
-                            <Font size="48.0" />
+                            <Font size="18.0" />
                         </font>
                     </Button>
                     <Label fx:id="stockAcc2" layoutX="330.0" layoutY="30.0" text="##">
@@ -120,14 +119,14 @@
                             <Font size="44.0" />
                         </font>
                     </Label>
-                    <Button fx:id="misBeer1" layoutY="300.0" mnemonicParsing="false" onAction="#misBeerButtonClicked" prefHeight="80.0" prefWidth="404.0" text="MisBier">
+                    <Button fx:id="misKrat1" layoutY="300.0" mnemonicParsing="false" onAction="#misKratButtonClicked" prefHeight="80.0" prefWidth="404.0" text="MisKrat">
                         <font>
                             <Font size="18.0" />
                         </font>
                     </Button>
-                    <Button fx:id="beerDrank1" layoutY="100.0" mnemonicParsing="false" onAction="#drankButtonClicked" prefHeight="200.0" prefWidth="404.0" text="Bier Gepakt">
+                    <Button fx:id="kratKoop1" layoutY="100.0" mnemonicParsing="false" onAction="#kratKoopButtonClicked" prefHeight="200.0" prefWidth="404.0" text="Krat gekocht">
                         <font>
-                            <Font size="48.0" />
+                            <Font size="18.0" />
                         </font>
                     </Button>
                     <Label fx:id="stockAcc1" layoutX="330.0" layoutY="30.0" text="##">
@@ -144,14 +143,14 @@
                             <Font size="24.0" />
                         </font>
                     </Text>
-                    <Button fx:id="misBeer0" layoutY="300.0" mnemonicParsing="false" onAction="#misBeerButtonClicked" prefHeight="80.0" prefWidth="404.0" text="MisBier">
+                    <Button fx:id="misKrat0" layoutY="300.0" mnemonicParsing="false" onAction="#misKratButtonClicked" prefHeight="80.0" prefWidth="404.0" text="MisKrat">
                         <font>
                             <Font size="18.0" />
                         </font>
                     </Button>
-                    <Button fx:id="beerDrank0" layoutY="100.0" mnemonicParsing="false" onAction="#drankButtonClicked" prefHeight="200.0" prefWidth="404.0" text="Bier Gepakt">
+                    <Button fx:id="kratKoop0" layoutY="100.0" mnemonicParsing="false" onAction="#kratKoopButtonClicked" prefHeight="200.0" prefWidth="404.0" text="Krat gekocht" textOverrun="CENTER_WORD_ELLIPSIS">
                         <font>
-                            <Font size="48.0" />
+                            <Font size="18.0" />
                         </font>
                     </Button>
                     <Label fx:id="stockAcc0" layoutX="330.0" layoutY="30.0" text="##">
