--- a/src/main/resources/views/instellingenStuff/transactionView.fxml
+++ b/src/main/resources/views/instellingenStuff/transactionView.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="831.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="contollers.TransactionViewController">
+<AnchorPane prefHeight="831.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="contollers.instellingenStuff.TransactionViewController">
    <children>
       <ListView fx:id="listView" layoutX="140.0" layoutY="26.0" prefHeight="770.0" prefWidth="1000.0" />
    </children>
