--- a/src/main/resources/views/statistiekStuff/jarfGildeView.fxml
+++ b/src/main/resources/views/statistiekStuff/jarfGildeView.fxml
@@ -14,16 +14,17 @@
                   <Font size="48.0" />
                </font>
             </Label>
-            <Button fx:id="jarfButton0" layoutX="182.0" mnemonicParsing="false" onAction="#jarfButton" prefHeight="110.0" prefWidth="270.0" text="ik heb net gejarft">
+            <Button fx:id="jarfButton0" layoutX="182.0" mnemonicParsing="false" onAction="#jarfButton" prefHeight="110.0" prefWidth="220.0" text="ik heb net gejarft">
                <font>
                   <Font size="24.0" />
                </font>
             </Button>
-            <Label fx:id="qtyLabel0" layoutX="500.0" layoutY="32.0" text="###">
+            <Label fx:id="qtyLabel0" layoutX="510.0" layoutY="32.0" text="###">
                <font>
                   <Font size="36.0" />
                </font>
             </Label>
+            <Button layoutX="402.0" mnemonicParsing="false" prefHeight="110.0" prefWidth="100.0" text="Button" />
          </children>
       </Pane>
        <Pane layoutX="14.0" layoutY="124.0" prefHeight="110.0" prefWidth="580.0">
@@ -33,12 +34,12 @@
                        <Font size="48.0" />
                    </font>
                </Label>
-               <Button fx:id="jarfButton1" layoutX="182.0" mnemonicParsing="false" onAction="#jarfButton" prefHeight="110.0" prefWidth="270.0" text="ik heb net gejarft">
+               <Button fx:id="jarfButton1" layoutX="182.0" mnemonicParsing="false" onAction="#jarfButton" prefHeight="110.0" prefWidth="220.0" text="ik heb net gejarft">
                    <font>
                        <Font size="24.0" />
                    </font>
                </Button>
-               <Label fx:id="qtyLabel1" layoutX="500.0" layoutY="32.0" text="###">
+               <Label fx:id="qtyLabel1" layoutX="510.0" layoutY="32.0" text="###">
                    <font>
                        <Font size="36.0" />
                    </font>
@@ -52,12 +53,12 @@
                        <Font size="48.0" />
                    </font>
                </Label>
-               <Button fx:id="jarfButton2" layoutX="182.0" mnemonicParsing="false" onAction="#jarfButton" prefHeight="110.0" prefWidth="270.0" text="ik heb net gejarft">
+               <Button fx:id="jarfButton2" layoutX="182.0" mnemonicParsing="false" onAction="#jarfButton" prefHeight="110.0" prefWidth="220.0" text="ik heb net gejarft">
                    <font>
                        <Font size="24.0" />
                    </font>
                </Button>
-               <Label fx:id="qtyLabel2" layoutX="500.0" layoutY="32.0" text="###">
+               <Label fx:id="qtyLabel2" layoutX="510.0" layoutY="32.0" text="###">
                    <font>
                        <Font size="36.0" />
                    </font>
@@ -71,12 +72,12 @@
                        <Font size="48.0" />
                    </font>
                </Label>
-               <Button fx:id="jarfButton3" layoutX="182.0" mnemonicParsing="false" onAction="#jarfButton" prefHeight="110.0" prefWidth="270.0" text="ik heb net gejarft">
+               <Button fx:id="jarfButton3" layoutX="182.0" mnemonicParsing="false" onAction="#jarfButton" prefHeight="110.0" prefWidth="220.0" text="ik heb net gejarft">
                    <font>
                        <Font size="24.0" />
                    </font>
                </Button>
-               <Label fx:id="qtyLabel3" layoutX="500.0" layoutY="32.0" text="###">
+               <Label fx:id="qtyLabel3" layoutX="510.0" layoutY="32.0" text="###">
                    <font>
                        <Font size="36.0" />
                    </font>
@@ -90,12 +91,12 @@
                        <Font size="48.0" />
                    </font>
                </Label>
-               <Button fx:id="jarfButton4" layoutX="182.0" mnemonicParsing="false" onAction="#jarfButton" prefHeight="110.0" prefWidth="270.0" text="ik heb net gejarft">
+               <Button fx:id="jarfButton4" layoutX="182.0" mnemonicParsing="false" onAction="#jarfButton" prefHeight="110.0" prefWidth="220.0" text="ik heb net gejarft">
                    <font>
                        <Font size="24.0" />
                    </font>
                </Button>
-               <Label fx:id="qtyLabel4" layoutX="500.0" layoutY="32.0" text="###">
+               <Label fx:id="qtyLabel4" layoutX="510.0" layoutY="32.0" text="###">
                    <font>
                        <Font size="36.0" />
                    </font>
@@ -109,12 +110,12 @@
                        <Font size="48.0" />
                    </font>
                </Label>
-               <Button fx:id="jarfButton5" layoutX="182.0" mnemonicParsing="false" onAction="#jarfButton" prefHeight="110.0" prefWidth="270.0" text="ik heb net gejarft">
+               <Button fx:id="jarfButton5" layoutX="182.0" mnemonicParsing="false" onAction="#jarfButton" prefHeight="110.0" prefWidth="220.0" text="ik heb net gejarft">
                    <font>
                        <Font size="24.0" />
                    </font>
                </Button>
-               <Label fx:id="qtyLabel5" layoutX="500.0" layoutY="32.0" text="###">
+               <Label fx:id="qtyLabel5" layoutX="510.0" layoutY="32.0" text="###">
                    <font>
                        <Font size="36.0" />
                    </font>
