--- a/src/main/resources/views/turfStuff/turfBeerView.fxml
+++ b/src/main/resources/views/turfStuff/turfBeerView.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="831.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="contollers.turfStuff.TurfBeerViewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="831.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="contollers.turfStuff.TurfBeerViewController">
         <children>
             <Slider fx:id="levelSlider" layoutX="1076.0" layoutY="4.0" majorTickUnit="1.0" max="5.0" minorTickCount="0" prefHeight="50.0" prefWidth="200.0" snapToTicks="true" />
             <Text layoutX="6.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Totale voorraad: " wrappingWidth="274.0">
@@ -166,10 +166,15 @@
                     </Label>
                 </children>
             </Pane>
-      <Button layoutX="490.0" layoutY="4.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="300.0" text="HJ is kut aan het doen">
+      <Button fx:id="HJbutton" layoutX="460.0" layoutY="4.0" mnemonicParsing="false" onAction="#HJcounter" prefHeight="50.0" prefWidth="300.0" text="HJ is kut aan het doen">
          <font>
             <Font size="18.0" />
          </font>
       </Button>
+      <Label fx:id="HJlabel" layoutX="771.0" layoutY="5.0" text="####">
+         <font>
+            <Font size="36.0" />
+         </font>
+      </Label>
         </children>
     </AnchorPane>
