--- a/src/main/resources/views/extrasStuff/jarfGildeView.fxml
+++ b/src/main/resources/views/extrasStuff/jarfGildeView.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="689.0" prefWidth="1250.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="contollers.statistiekStuff.JarfGildeViewController">
+<AnchorPane prefHeight="689.0" prefWidth="1250.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="contollers.extrasStuff.JarfGildeViewController">
    <children>
       <Pane layoutX="14.0" layoutY="14.0" prefHeight="110.0" prefWidth="580.0">
          <children>
