--- a/src/main/resources/views/extrasStuff/lineChartView.fxml
+++ b/src/main/resources/views/extrasStuff/lineChartView.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.text.*?>
 
 
-<AnchorPane prefHeight="689.0" prefWidth="1250.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="contollers.statistiekStuff.LineChartViewController">
+<AnchorPane prefHeight="689.0" prefWidth="1250.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="contollers.extrasStuff.LineChartViewController">
    <children>
       <VBox fx:id="container" layoutX="1.0" layoutY="1.0" prefHeight="689.0" prefWidth="1250.0" />
       <Button fx:id="updateButton" layoutX="1013.0" layoutY="610.0" mnemonicParsing="false" onAction="#update" prefHeight="80.0" prefWidth="240.0" text="Update">
