--- a/src/main/resources/views/extrasStuff/extrasView.fxml
+++ b/src/main/resources/views/extrasStuff/extrasView.fxml
@@ -21,7 +21,7 @@
             <Font size="18.0" />
          </font>
       </Button>
-      <Button layoutX="1115.0" layoutY="15.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="150.0" text="Jarf Grafiek">
+      <Button fx:id="jarfGraphButton" layoutX="1115.0" layoutY="15.0" mnemonicParsing="false" onAction="#JarfGraph" prefHeight="100.0" prefWidth="150.0" text="Jarf Grafiek">
          <font>
             <Font size="18.0" />
          </font>
